--- a/rl_agent/01_dqn.ipynb
+++ b/rl_agent/01_dqn.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ef50696e",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ba46330f",
    "metadata": {},
    "outputs": [],
@@ -112,10 +112,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fc003cf5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 65])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "==========================================================================================\n",
+       "Layer (type:depth-idx)                   Output Shape              Param #\n",
+       "==========================================================================================\n",
+       "DQN                                      [1, 65]                   --\n",
+       "├─Sequential: 1-1                        [1, 8, 8, 8]              --\n",
+       "│    └─Conv2d: 2-1                       [1, 8, 8, 8]              144\n",
+       "│    └─SiLU: 2-2                         [1, 8, 8, 8]              --\n",
+       "├─DSConv: 1-2                            [1, 8, 8, 8]              --\n",
+       "│    └─Conv2d: 2-3                       [1, 8, 8, 8]              72\n",
+       "│    └─Conv2d: 2-4                       [1, 8, 8, 8]              64\n",
+       "│    └─GroupNorm: 2-5                    [1, 8, 8, 8]              16\n",
+       "│    └─SiLU: 2-6                         [1, 8, 8, 8]              --\n",
+       "├─DSConv: 1-3                            [1, 8, 8, 8]              --\n",
+       "│    └─Conv2d: 2-7                       [1, 8, 8, 8]              72\n",
+       "│    └─Conv2d: 2-8                       [1, 8, 8, 8]              64\n",
+       "│    └─GroupNorm: 2-9                    [1, 8, 8, 8]              16\n",
+       "│    └─SiLU: 2-10                        [1, 8, 8, 8]              --\n",
+       "├─AdaptiveAvgPool2d: 1-4                 [1, 8, 1, 1]              --\n",
+       "├─Sequential: 1-5                        [1, 65]                   --\n",
+       "│    └─Flatten: 2-11                     [1, 8]                    --\n",
+       "│    └─Linear: 2-12                      [1, 65]                   585\n",
+       "│    └─SiLU: 2-13                        [1, 65]                   --\n",
+       "├─Linear: 1-6                            [1, 65]                   4,290\n",
+       "==========================================================================================\n",
+       "Total params: 5,323\n",
+       "Trainable params: 5,323\n",
+       "Non-trainable params: 0\n",
+       "Total mult-adds (Units.MEGABYTES): 0.03\n",
+       "==========================================================================================\n",
+       "Input size (MB): 0.00\n",
+       "Forward/backward pass size (MB): 0.03\n",
+       "Params size (MB): 0.02\n",
+       "Estimated Total Size (MB): 0.05\n",
+       "=========================================================================================="
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# アーキテクチャのテスト\n",
     "dqn = DQN()\n",
@@ -136,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0fb3813c",
    "metadata": {},
    "outputs": [],
@@ -158,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2df06871",
    "metadata": {},
    "outputs": [],
@@ -678,7 +729,43 @@
    "execution_count": null,
    "id": "c52fdaf0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "device: mps\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b04c55dda98f4b5aa2a30cd90e1ccbd1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Init replay buffer:   0%|          | 0/5000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5a79b743cad94679ae4edbb507f50ccb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Train Double DQN:   0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# デバイス自動選択\n",
     "device = torch.device(\n",
