--- a/rl_agent/01_dqn.ipynb
+++ b/rl_agent/01_dqn.ipynb
@@ -38,8 +38,8 @@
     "import logging\n",
     "\n",
     "# 学習やテスト用の関数\n",
-    "from utils.othello_env import OthelloEnv\n",
-    "from utils.othello_reward import ShapedReward"
+    "from utils.mori.othello_env import OthelloEnv\n",
+    "from utils.mori.othello_reward import ShapedReward"
    ]
   },
   {
@@ -437,7 +437,7 @@
     "            action = self._select_action_by_epsilon_greedy(env, epsilon)\n",
     "\n",
     "            # シェーピング報酬：prev/next から r を算出\n",
-    "            reward_fn = ShapedReward(player, eta=self.shaping_eta, gamma=self.gamma)\n",
+    "            reward_fn = ShapedReward(player)\n",
     "            next_state, reward, done, _ = env.step(action, reward_fn=reward_fn)\n",
     "            next_player = env.player\n",
     "\n",
@@ -570,7 +570,7 @@
     "                state = env.get_state()\n",
     "                legal_actions = env.legal_actions()\n",
     "                action = random.choice(legal_actions)\n",
-    "                reward_fn = ShapedReward(player, eta=self.shaping_eta, gamma=self.gamma)\n",
+    "                reward_fn = ShapedReward(player)\n",
     "                next_state, reward, done, _ = env.step(action, reward_fn=reward_fn)\n",
     "                next_player = env.player\n",
     "                next_legal_actions = self._legal_actions_from_board(next_state[0], next_player)\n",
@@ -711,6 +711,7 @@
     "            next_player (int): 次盤面での手番（+1/-1）。\n",
     "            next_legal_actions (List[int]): 次状態での合法手インデックス一覧。\n",
     "        \"\"\"\n",
+    "        legal_actions = self._legal_actions_from_board(board, player)\n",
     "        transition = {\n",
     "            \"board\": np.array(board, dtype=np.float32),\n",
     "            \"action\": int(action),\n",
@@ -719,6 +720,7 @@
     "            \"done\": bool(done),\n",
     "            \"player\": int(player),\n",
     "            \"next_player\": int(next_player),\n",
+    "            \"legal_actions\": legal_actions,\n",
     "            \"next_legal_actions\": next_legal_actions,\n",
     "        }\n",
     "        self.replay_buffer.append(transition)\n"
@@ -726,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c52fdaf0",
    "metadata": {},
    "outputs": [
@@ -740,7 +742,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b04c55dda98f4b5aa2a30cd90e1ccbd1",
+       "model_id": "bb4d34ddd8ad40839740ce9b5b93d249",
        "version_major": 2,
        "version_minor": 0
       },
@@ -754,16 +756,34 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a79b743cad94679ae4edbb507f50ccb",
+       "model_id": "1f77079f3be54446a377c6bdc4905fb0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Train Double DQN:   0%|          | 0/10 [00:00<?, ?it/s]"
+       "Train Double DQN:   0%|          | 0/1000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 35\u001b[39m\n\u001b[32m     16\u001b[39m trainer = TrainDoubleDQN(\n\u001b[32m     17\u001b[39m     dqn=dqn,\n\u001b[32m     18\u001b[39m     device=device,\n\u001b[32m   (...)\u001b[39m\u001b[32m     31\u001b[39m     save_best_path=\u001b[33m\"\u001b[39m\u001b[33mbest_dqn.pth\u001b[39m\u001b[33m\"\u001b[39m,  \u001b[38;5;66;03m# ベスト更新のたび保存（不要なら None）\u001b[39;00m\n\u001b[32m     32\u001b[39m )\n\u001b[32m     34\u001b[39m \u001b[38;5;66;03m# 学習開始：ベストモデルも受け取る\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m35\u001b[39m metrics, best_model = \u001b[43mtrainer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreturn_best_model\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     37\u001b[39m \u001b[38;5;66;03m# 学習曲線を確認\u001b[39;00m\n\u001b[32m     38\u001b[39m plt.figure()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 143\u001b[39m, in \u001b[36mTrainDoubleDQN.train\u001b[39m\u001b[34m(self, return_best_model)\u001b[39m\n\u001b[32m    140\u001b[39m pbar = tqdm(total=\u001b[38;5;28mself\u001b[39m.num_episodes, desc=\u001b[33m\"\u001b[39m\u001b[33mTrain Double DQN\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    141\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m ep \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m.num_episodes):\n\u001b[32m    142\u001b[39m     \u001b[38;5;66;03m# 1 エピソード実行\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m143\u001b[39m     ep_reward = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_run_episode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mep\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    144\u001b[39m     \u001b[38;5;28mself\u001b[39m.rewards.append(ep_reward)\n\u001b[32m    146\u001b[39m     \u001b[38;5;66;03m# 直近ローリング平均（窓幅に達するまでは全体平均）\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 244\u001b[39m, in \u001b[36mTrainDoubleDQN._run_episode\u001b[39m\u001b[34m(self, episode_idx)\u001b[39m\n\u001b[32m    242\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mself\u001b[39m._num_env_steps % \u001b[38;5;28mself\u001b[39m.train_freq == \u001b[32m0\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m (\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m.replay_buffer) >= \u001b[38;5;28mmax\u001b[39m(\u001b[38;5;28mself\u001b[39m.batch_size, \u001b[38;5;28mself\u001b[39m.learning_starts)):\n\u001b[32m    243\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m.gradient_steps):\n\u001b[32m--> \u001b[39m\u001b[32m244\u001b[39m         loss = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_update_dqn_double\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    245\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m math.isnan(loss):\n\u001b[32m    246\u001b[39m             \u001b[38;5;28mself\u001b[39m.losses.append(loss)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 302\u001b[39m, in \u001b[36mTrainDoubleDQN._update_dqn_double\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    300\u001b[39m \u001b[38;5;28mself\u001b[39m.optimizer.zero_grad(set_to_none=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m    301\u001b[39m loss.backward()\n\u001b[32m--> \u001b[39m\u001b[32m302\u001b[39m \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mnn\u001b[49m\u001b[43m.\u001b[49m\u001b[43mutils\u001b[49m\u001b[43m.\u001b[49m\u001b[43mclip_grad_norm_\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mdqn\u001b[49m\u001b[43m.\u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_norm\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1.0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    303\u001b[39m \u001b[38;5;28mself\u001b[39m.optimizer.step()\n\u001b[32m    305\u001b[39m \u001b[38;5;28mself\u001b[39m._num_updates += \u001b[32m1\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/dev/othello-with-rl/rl_agent/.venv/lib/python3.12/site-packages/torch/nn/utils/clip_grad.py:36\u001b[39m, in \u001b[36m_no_grad.<locals>._no_grad_wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     34\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_no_grad_wrapper\u001b[39m(*args, **kwargs):\n\u001b[32m     35\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m torch.no_grad():\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/dev/othello-with-rl/rl_agent/.venv/lib/python3.12/site-packages/torch/nn/utils/clip_grad.py:221\u001b[39m, in \u001b[36mclip_grad_norm_\u001b[39m\u001b[34m(parameters, max_norm, norm_type, error_if_nonfinite, foreach)\u001b[39m\n\u001b[32m    216\u001b[39m         warnings.warn(\n\u001b[32m    217\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33m`parameters` is an empty generator, no gradient clipping will occur.\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    218\u001b[39m             stacklevel=\u001b[32m3\u001b[39m,\n\u001b[32m    219\u001b[39m         )\n\u001b[32m    220\u001b[39m grads = [p.grad \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m parameters \u001b[38;5;28;01mif\u001b[39;00m p.grad \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[32m--> \u001b[39m\u001b[32m221\u001b[39m total_norm = \u001b[43m_get_total_norm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgrads\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnorm_type\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merror_if_nonfinite\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mforeach\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    222\u001b[39m _clip_grads_with_norm_(parameters, max_norm, total_norm, foreach)\n\u001b[32m    223\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m total_norm\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/dev/othello-with-rl/rl_agent/.venv/lib/python3.12/site-packages/torch/nn/utils/clip_grad.py:36\u001b[39m, in \u001b[36m_no_grad.<locals>._no_grad_wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     34\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_no_grad_wrapper\u001b[39m(*args, **kwargs):\n\u001b[32m     35\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m torch.no_grad():\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/dev/othello-with-rl/rl_agent/.venv/lib/python3.12/site-packages/torch/nn/utils/clip_grad.py:100\u001b[39m, in \u001b[36m_get_total_norm\u001b[39m\u001b[34m(tensors, norm_type, error_if_nonfinite, foreach)\u001b[39m\n\u001b[32m     94\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     95\u001b[39m         norms.extend(\n\u001b[32m     96\u001b[39m             [torch.linalg.vector_norm(g, norm_type) \u001b[38;5;28;01mfor\u001b[39;00m g \u001b[38;5;129;01min\u001b[39;00m device_tensors]\n\u001b[32m     97\u001b[39m         )\n\u001b[32m     99\u001b[39m total_norm = torch.linalg.vector_norm(\n\u001b[32m--> \u001b[39m\u001b[32m100\u001b[39m     \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstack\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnorm\u001b[49m\u001b[43m.\u001b[49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfirst_device\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mnorm\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mnorms\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m, norm_type\n\u001b[32m    101\u001b[39m )\n\u001b[32m    103\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m error_if_nonfinite \u001b[38;5;129;01mand\u001b[39;00m torch.logical_or(total_norm.isnan(), total_norm.isinf()):\n\u001b[32m    104\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[32m    105\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mThe total norm of order \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnorm_type\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m for gradients from \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    106\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33m`parameters` is non-finite, so it cannot be clipped. To disable \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    107\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mthis error and scale the gradients by the non-finite norm anyway, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    108\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mset `error_if_nonfinite=False`\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    109\u001b[39m     )\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
     }
    ],
    "source": [
@@ -786,7 +806,7 @@
     "    dqn=dqn,\n",
     "    device=device,\n",
     "    ReplayBufferCls=replay_cls,\n",
-    "    num_episodes=10,\n",
+    "    num_episodes=1000,\n",
     "    batch_size=128,\n",
     "    gamma=0.99,\n",
     "    lr=1e-3,\n",
