--- a/rl_agent/mori/get_othello_data.ipynb
+++ b/rl_agent/mori/get_othello_data.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "acc0cbb6",
+   "metadata": {},
+   "source": [
+    "[https://www.egaroucid.nyanyan.dev/ja/technology/train-data/](https://www.egaroucid.nyanyan.dev/ja/technology/train-data/) のデータを使用\n",
+    "\n",
+    "- rl_agentディレクトリに上記からダウンロードしたデータを展開する\n",
+    "- その後、以下を実行"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "8b16a4e9",
    "metadata": {},
    "outputs": [],
@@ -21,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "3cb86ddc",
    "metadata": {},
    "outputs": [],
@@ -37,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "2feb77c7",
    "metadata": {},
    "outputs": [],
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "68585476",
    "metadata": {},
    "outputs": [],
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "4b0ca271",
    "metadata": {},
    "outputs": [],
@@ -92,13 +103,18 @@
     "    boards = np.concatenate(board_parent, axis=0)\n",
     "    scores = np.concatenate(score_parent, axis=0)\n",
     "\n",
+    "    # ランダムに1万件のみ\n",
+    "    idx = np.random.choice(len(boards), 10000, replace=False)\n",
+    "    boards = boards[idx]\n",
+    "    scores = scores[idx]\n",
+    "\n",
     "    np.save(os.path.join(save_dir, \"boards.npy\"), boards)\n",
     "    np.save(os.path.join(save_dir, \"scores.npy\"), scores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "6a50a942",
    "metadata": {},
    "outputs": [
@@ -106,7 +122,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 26/26 [02:44<00:00,  6.32s/it]\n"
+      "100%|██████████| 26/26 [02:44<00:00,  6.34s/it]\n"
      ]
     }
    ],
