ddqnの搭載完了（あとは、mcts+nnのみ）

--- a/rl_agent/mori/train_dqn.ipynb
+++ b/rl_agent/mori/train_dqn.ipynb
@@ -82,7 +82,7 @@
     "        self,\n",
     "        in_ch: int = 2,\n",
     "        width: int = 32,\n",
-    "        num_res_blocks: int = 3,\n",
+    "        num_res_blocks: int = 4,\n",
     "        bn_eps: float = 1e-5,\n",
     "    ):\n",
     "        super().__init__()\n",
@@ -150,20 +150,25 @@
        "│    │    └─BatchNorm2d: 3-10            [1, 32, 8, 8]             64\n",
        "│    │    └─Conv2d: 3-11                 [1, 32, 8, 8]             9,216\n",
        "│    │    └─BatchNorm2d: 3-12            [1, 32, 8, 8]             64\n",
+       "│    └─ResBlock: 2-7                     [1, 32, 8, 8]             --\n",
+       "│    │    └─Conv2d: 3-13                 [1, 32, 8, 8]             9,216\n",
+       "│    │    └─BatchNorm2d: 3-14            [1, 32, 8, 8]             64\n",
+       "│    │    └─Conv2d: 3-15                 [1, 32, 8, 8]             9,216\n",
+       "│    │    └─BatchNorm2d: 3-16            [1, 32, 8, 8]             64\n",
        "├─Sequential: 1-3                        [1, 2, 8, 8]              --\n",
-       "│    └─Conv2d: 2-7                       [1, 2, 8, 8]              64\n",
-       "│    └─ReLU: 2-8                         [1, 2, 8, 8]              --\n",
+       "│    └─Conv2d: 2-8                       [1, 2, 8, 8]              64\n",
+       "│    └─ReLU: 2-9                         [1, 2, 8, 8]              --\n",
        "├─Linear: 1-4                            [1, 65]                   8,385\n",
        "==========================================================================================\n",
-       "Total params: 64,769\n",
-       "Trainable params: 64,769\n",
+       "Total params: 83,329\n",
+       "Trainable params: 83,329\n",
        "Non-trainable params: 0\n",
-       "Total mult-adds (Units.MEGABYTES): 3.59\n",
+       "Total mult-adds (Units.MEGABYTES): 4.77\n",
        "==========================================================================================\n",
        "Input size (MB): 0.00\n",
-       "Forward/backward pass size (MB): 0.23\n",
-       "Params size (MB): 0.26\n",
-       "Estimated Total Size (MB): 0.49\n",
+       "Forward/backward pass size (MB): 0.30\n",
+       "Params size (MB): 0.33\n",
+       "Estimated Total Size (MB): 0.63\n",
        "=========================================================================================="
       ]
      },
@@ -340,7 +345,7 @@
     "        self.target_dqn = copy.deepcopy(dqn).to(self.device)\n",
     "        self.target_dqn.eval()\n",
     "\n",
-    "        self.optimizer = optim.Adam(self.dqn.parameters(), lr=lr)\n",
+    "        self.optimizer = optim.AdamW(self.dqn.parameters(), lr=lr, weight_decay=1e-5)\n",
     "        self.loss_fn = nn.SmoothL1Loss()\n",
     "\n",
     "        # 相手のモデル\n",
@@ -429,6 +434,7 @@
     "            else:\n",
     "                rolling_avg = float(np.mean(self.rewards))\n",
     "\n",
+    "            # 最高スコアのときベストモデルを保存\n",
     "            if rolling_avg > self.best_score:\n",
     "                self.best_score = rolling_avg\n",
     "                self.best_state_dict = copy.deepcopy(self.dqn.state_dict())\n",
@@ -437,7 +443,7 @@
     "\n",
     "            last_loss = self.losses[-1] if self.losses else float(\"nan\")\n",
     "            pbar.set_postfix_str(\n",
-    "                f\"EpR {ep_reward*64:.2f}, Roll@{self.rolling_window}: {rolling_avg*64:.2f}, Best: {self.best_score:.2f}, Loss: {last_loss:.3f}, ε: {self._epsilon_by_step(self._num_env_steps):.3f}\"\n",
+    "                f\"EpR {ep_reward:.2f}, Roll@{self.rolling_window}: {rolling_avg:.2f}, Best: {self.best_score:.2f}, Loss: {last_loss:.4f}, ε: {self._epsilon_by_step(self._num_env_steps):.3f}\"\n",
     "            )\n",
     "            pbar.update(1)\n",
     "\n",
@@ -502,7 +508,8 @@
     "            # 状態遷移を保存\n",
     "            # 終局の場合は３回状態遷移を保存（通常時は1回）\n",
     "            if done:\n",
-    "                num_save = 3\n",
+    "                #num_save = 3\n",
+    "                num_save = 1\n",
     "            else:\n",
     "                num_save = 1\n",
     "            for _ in range(num_save):\n",
@@ -571,7 +578,8 @@
     "                    # 状態遷移を保存\n",
     "                    # 終局の場合は３回状態遷移を保存（通常時は1回）\n",
     "                    if done:\n",
-    "                        num_save = 3\n",
+    "                        #num_save = 3\n",
+    "                        num_save = 1\n",
     "                    else:\n",
     "                        num_save = 1\n",
     "                    for _ in range(num_save):\n",
@@ -647,7 +655,8 @@
     "                    # 状態遷移を保存\n",
     "                    # 終局の場合は３回状態遷移を保存（通常時は1回）\n",
     "                    if done:\n",
-    "                        num_save = 3\n",
+    "                        #num_save = 3\n",
+    "                        num_save = 1\n",
     "                    else:\n",
     "                        num_save = 1\n",
     "                    for _ in range(num_save):\n",
@@ -784,7 +793,7 @@
     "        ターミナル遷移と非ターミナル遷移が、それぞれの目標数に達するまでゲームをプレイし続ける。\n",
     "        \"\"\"\n",
     "        target = min(self.init_memory_size, self.replay_buffer.memory_size)\n",
-    "        terminal_quota = target // 3\n",
+    "        terminal_quota = target // 4\n",
     "        non_terminal_quota = target - terminal_quota\n",
     "\n",
     "        num_terminal = 0\n",
@@ -931,7 +940,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0db504d782a045eda1d85063f41aec3a",
+       "model_id": "31899e47a7514b9e91da14edd6ccdaf9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1005,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c52fdaf0",
    "metadata": {},
    "outputs": [
@@ -1019,12 +1028,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae02f6a5e1864db3bed116ce732b23b7",
+       "model_id": "d5d844f8d55d4954a8323b53cf2f7555",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Init replay buffer:   0%|          | 0/5000 [00:00<?, ?it/s]"
+       "Init replay buffer:   0%|          | 0/10000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1033,16 +1042,23 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ceeeb0d98a14e2fb7ff4772aba86c9c",
+       "model_id": "b32a2714a2604b769f461b70ae7e3c5d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Train Double DQN:   0%|          | 0/2000 [00:00<?, ?it/s]"
+       "Train Double DQN:   0%|          | 0/10000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best model saved to models/best_2025-09-29_13-07-27.pth\n"
+     ]
     }
    ],
    "source": [
@@ -1056,18 +1072,18 @@
     "    dqn=dqn,\n",
     "    device=device,\n",
     "    ReplayBufferCls=ReplayBuffer,\n",
-    "    num_episodes=2e3,\n",
+    "    num_episodes=1e4,\n",
     "    batch_size=256,\n",
     "    gamma=0.99,\n",
-    "    lr=5e-4,\n",
-    "    target_update_freq=500,\n",
+    "    lr=2e-4,\n",
+    "    target_update_freq=200,\n",
     "    epsilon_start=1.0,\n",
     "    epsilon_end=0.05,\n",
     "    epsilon_decay_steps=1e5,\n",
     "    max_games_per_episode=1,\n",
-    "    init_memory_size=5e3,\n",
-    "    memory_size=1e4,\n",
-    "    learning_starts=1e3,\n",
+    "    init_memory_size=1e4,\n",
+    "    memory_size=1e5,\n",
+    "    learning_starts=1e4,\n",
     "    rolling_window=20,\n",
     "    save_best_path=os.path.join(save_dir, \"best.pth\"),\n",
     "    pretrained_opp_path = os.path.join(save_dir, \"critic\", \"pretrained_criticnet.pt\"),\n",
